[package]
name = "networking_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.164", features = ["derive"] }
socket2 = "0.5.3"
tokio = {version = "1.28.2", features = ["full"]}
